--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"build": "vite build",
+		"format": "prettier --write .",
+		"build": "bun run format && vite build",
 		"lint": "eslint .",
 		"preview": "vite preview"
+	},
+	"engines": {
+		"node": ">=18",
+		"bun": ">=1.1"
 	},
 	"dependencies": {
 		"@iconify/react": "^6.0.2",
@@ -35,6 +40,8 @@
 		"eslint-plugin-react-refresh": "^0.4.24",
 		"globals": "^16.5.0",
 		"prettier": "3.7.3",
-		"vite": "^7.2.4"
+		"prettier-plugin-tailwindcss": "^0.7.2",
+		"vite": "^7.2.4",
+		"vite-plugin-pwa": "^1.2.0"
 	}
 }
